Chrome OS OOBE: Play startup sound only when sound device is present.

This CL delays startup sound playback until default sound output device
has known type.

Bug: 848485
Change-Id: I911e37afd34d28f142c46ef63b7b6345988d159b
Reviewed-on: https://chromium-review.googlesource.com/1160143
Reviewed-by: Jenny Zhang <jennyz@chromium.org>
Commit-Queue: Alexander Alekseev <alemate@chromium.org>
Cr-Commit-Position: refs/heads/master@{#580648}
Former-commit-id: c1710c99c9df8c7d299b6ce4acdfdaf88156d1a3